Fix scrollbar renaming

--- a/apps/web/src/pages/Profile/BottomBox/BottomBox.module.scss
+++ b/apps/web/src/pages/Profile/BottomBox/BottomBox.module.scss
@@ -49,7 +49,7 @@
       }
 
       .ClickedWord {
-        background: #dbf2ff;
+        background: var(--off-white);
         border: 1px solid var(--main-blue);
 
         // text
