--- a/apps/web/src/pages/Profile/Profile.module.scss
+++ b/apps/web/src/pages/Profile/Profile.module.scss
@@ -67,7 +67,7 @@
           }
 
           .ClickedWord {
-            background: #dbf2ff;
+            background: var(--off-white);
             border: 1px solid var(--main-blue);
             font-style: normal;
             font-weight: 700;
